feat: add mvc module
