# docs/swagger.json
@@ -15,7 +15,7 @@
     "paths": {
         "/students/": {
             "get": {
-                "description": "Get details of a student",
+                "description": "Get all students",
                 "consumes": [
                     "application/json"
                 ],
@@ -25,18 +25,18 @@
                 "tags": [
                     "students"
                 ],
-                "summary": "Get students",
+                "summary": "Get all students",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Student"
+                            "$ref": "#/definitions/model.Student"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
+                            "$ref": "#/definitions/response.ErrorResponse"
                         }
                     }
                 }
@@ -44,15 +44,7 @@
         }
     },
     "definitions": {
-        "handlers.ErrorResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "handlers.Student": {
+        "model.Student": {
             "type": "object",
             "properties": {
                 "email": {
@@ -63,6 +55,31 @@
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "response.ErrorDetail": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "details": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "$ref": "#/definitions/response.ErrorDetail"
+                },
+                "success": {
+                    "type": "boolean"
                 }
             }
         }
