# pkg/response/error.go
@@ -1,0 +1,14 @@
+package response
+
+// ErrorDetail provides information about the error.
+type ErrorDetail struct {
+	Code    int    `json:"code"`
+	Message string `json:"message"`
+	Details string `json:"details,omitempty"`
+}
+
+// ErrorResponse represents a failed API response.
+type ErrorResponse struct {
+	Success bool        `json:"success"`
+	Error   ErrorDetail `json:"error"`
+}
